lib_LIBRARIES = libfwallsh-common.a

libfwallsh_common_a_SOURCES = common.h types.h allocate.c allocate.h stack.c stack.h hash.c hash.h string-util.c string-util.h error.c error.h config.c config.h
libfwallsh_common_a_CFLAGS  = -I$(srcdir)/../fwallsh

# You need to add to yourprogram_LDFLAGS the follozing flags :
#      -lsqlite3
